--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -494,6 +494,7 @@ jobs:
   - bosh-cf-cats
   plan:
   - aggregate:
+    - get: loggregator-ci
     - get: bbl-state
       resource: deployments-loggregator
     - get: cf-deployment
@@ -515,41 +516,25 @@ jobs:
       resource: deployments-loggregator
     - get: vars-files
       resource: deployments-loggregator
-  - task: upload-releases
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-      inputs:
-      - name: bbl-state
-      - name: loggregator-release
-      - name: cf-syslog-drain-release
-      - name: log-cache-release
-      run:
-        path: /bin/bash
-        args:
-        - "-c"
-        - |
-          #!/bin/bash
-
-          set -ex
-
-          pushd bbl-state/gcp/coconut-bbl
-            export BOSH_CLIENT=`bbl director-username`
-            export BOSH_CLIENT_SECRET=`bbl director-password`
-            export BOSH_CA_CERT=`bbl director-ca-cert`
-            export BOSH_ENVIRONMENT=`bbl director-address`
-          popd
-
-          releases="loggregator-release cf-syslog-drain-release log-cache-release"
-          for rel in $releases; do
-            pushd $rel
-              bosh create-release
-              bosh upload-release --rebase
-            popd
-          done
+  - aggregate:
+    - task: upload-loggregator-release
+      file: loggregator-ci/tasks/upload-release/task.yml
+      input_mapping:
+        bosh-release-dir: loggregator-release
+      params:
+        BBL_STATE_DIR: gcp/coconut-bbl
+    - task: upload-cf-syslog-drain-release
+      file: loggregator-ci/tasks/upload-release/task.yml
+      input_mapping:
+        bosh-release-dir: cf-syslog-drain-release
+      params:
+        BBL_STATE_DIR: gcp/coconut-bbl
+    - task: upload-log-cache-release
+      file: loggregator-ci/tasks/upload-release/task.yml
+      input_mapping:
+        bosh-release-dir: log-cache-release
+      params:
+        BBL_STATE_DIR: gcp/coconut-bbl
   - task: copy-ops-files
     config:
       platform: linux
@@ -582,11 +567,6 @@ jobs:
             path: /releases/name=cf-syslog-drain
             value:
               name: cf-syslog-drain
-              version: latest
-          - type: replace
-            path: /releases/name=log-cache
-            value:
-              name: log-cache
               version: latest
           EOT
   - task: upload-stemcell
