Enable bosh-dns on coconut
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -554,6 +554,7 @@ jobs:
         - |
           cp cf-deployment/operations/windows-cell.yml ops-files/
           cp cf-deployment/operations/scale-to-one-az.yml ops-files/
+          cp cf-deployment/operations/experimental/use-bosh-dns.yml ops-files/
           cp bbl-state/gcp/coconut-bbl/ops-files/*.yml ops-files/
           cp log-cache-release/manifests/operations/deploy-in-cf.yml ops-files/add-log-cache.yml
 
@@ -579,7 +580,7 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml datadog-agent.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml"
+      OPS_FILES: "clients.yml scale-to-one-az.yml datadog-agent.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml"
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
