--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -586,7 +586,7 @@ jobs:
       BBL_STATE_DIR: gcp/coconut-bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/coconut-bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml scale-to-one-az.yml datadog-agent.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml"
+      OPS_FILES: "clients.yml scale-to-one-az.yml diego.yml dev-versions.yml windows-cell.yml add-log-cache.yml use-bosh-dns.yml datadog-agent.yml"
       VARS_FILES: "gcp/coconut-bbl/vars-files/router.yml"
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
